// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with expense data 1`] = `
<div>
  <h3>
    Viewing 
    7
     
    expenses
     totalling 
    $2.00
  </h3>
</div>
`;

exports[`should render correctly without no expense 1`] = `
<div>
  <h3>
    Viewing 
    0
     
    expense
     totalling 
    $0.00
  </h3>
</div>
`;
